src/Base/main/default/objects/ProductConsumed/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <formula>PricebookEntry.Product2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductId</label>
    <type>Text</type>
</CustomField>